; ModuleID = '/home/carl/AnghaBench/zfs/lib/libzfs/extr_libzfs_sendrecv.c_fsavl_destroy.c'
source_filename = "/home/carl/AnghaBench/zfs/lib/libzfs/extr_libzfs_sendrecv.c_fsavl_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @fsavl_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fsavl_destroy(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = icmp eq i32* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  br label %21

8:                                                ; preds = %1
  store i8* null, i8** %4, align 8
  br label %9

9:                                                ; preds = %13, %8
  %10 = load i32*, i32** %2, align 8
  %11 = call i32* @avl_destroy_nodes(i32* %10, i8** %4)
  store i32* %11, i32** %3, align 8
  %12 = icmp ne i32* %11, null
  br i1 %12, label %13, label %16

13:                                               ; preds = %9
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @free(i32* %14)
  br label %9

16:                                               ; preds = %9
  %17 = load i32*, i32** %2, align 8
  %18 = call i32 @avl_destroy(i32* %17)
  %19 = load i32*, i32** %2, align 8
  %20 = call i32 @free(i32* %19)
  br label %21

21:                                               ; preds = %16, %7
  ret void
}

declare dso_local i32* @avl_destroy_nodes(i32*, i8**) #1

declare dso_local i32 @free(i32*) #1

declare dso_local i32 @avl_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
